--- a/main.css
+++ b/main.css
@@ -40,7 +40,9 @@ footer ul li img{
   margin-left: 0px;
   padding-left: 0px;
 }
-
+.galeria{
+  margin-top: 25px;
+}
 
   @media screen and (max-width: 770px){
     #cards{
